--- a/app/src/main/res/layout/fragment_patient_slot_selection.xml
+++ b/app/src/main/res/layout/fragment_patient_slot_selection.xml
@@ -86,7 +86,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="10dp"
         app:backgroundTint="@color/light_grey"
-        android:text="فترات مسائيه"
+        android:text="@string/evening_slots"
         android:textColor="@color/black"
         app:cornerRadius="40dp"
         android:textStyle="bold"
@@ -102,7 +102,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="10dp"
         app:cornerRadius="40dp"
-        android:text="فترات صباحية"
+        android:text="@string/morning_slots"
         app:backgroundTint="@color/light_grey"
         android:textColor="@color/black"
         android:textStyle="bold"
