--- a/app/src/main/res/layout/fragment_b_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_b_onboarding_1.xml
@@ -40,28 +40,16 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/skip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/text_box"
-        android:layout_marginBottom="30dp"
-        app:backgroundTint="@color/white"
-        android:layout_marginHorizontal="40dp"
-        android:text="@string/skip"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <com.google.android.material.button.MaterialButton
         android:id="@+id/get_started"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/text_box"
-        app:layout_constraintBottom_toTopOf="@id/skip"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginHorizontal="40dp"
         android:textAlignment="center"
         android:text="@string/get_started"
         app:backgroundTint="@color/default_blue"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="40dp"/>
 
     <TextView
         android:id="@+id/dr"
