--- a/app/src/main/res/layout/fragment_b_about_doctor.xml
+++ b/app/src/main/res/layout/fragment_b_about_doctor.xml
@@ -76,7 +76,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/name"
         android:text="@string/onboarding_intro"
-        android:textColor="@color/purple"/>
+        android:textColor="@color/grey"/>
 
     <TextView
         android:id="@+id/v_star1"
@@ -131,7 +131,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="علي فيزيتا (Veseeta)"
-        android:textColor="@color/default_blue"
         android:textSize="12sp"
         android:textStyle="bold"
         android:ellipsize="end"
@@ -194,7 +193,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="علي كليندو (Clindo)"
-        android:textColor="@color/default_blue"
         android:textSize="12sp"
         android:textStyle="bold"
         android:ellipsize="end"
