--- a/app/src/main/res/layout/fragment_doctor_home_2.xml
+++ b/app/src/main/res/layout/fragment_doctor_home_2.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/welcome_top"
-        android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageButton
@@ -40,8 +39,8 @@
         android:textSize="20sp"
         android:textColor="#878787"
         android:textStyle="bold|italic"
-        app:layout_constraintStart_toStartOf="@id/welcome"
-        android:layout_marginStart="12dp"
+        app:layout_constraintEnd_toEndOf="@id/welcome"
+        android:layout_marginEnd="12dp"
         app:layout_constraintTop_toBottomOf="@id/menu"
         android:layout_marginTop="35dp"/>
 
