--- a/app/src/main/res/layout/fragment_patient_for_you.xml
+++ b/app/src/main/res/layout/fragment_patient_for_you.xml
@@ -95,8 +95,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="10dp"
-                        android:src="@drawable/pregnant_with_bags"
-                        />
+                        android:src="@drawable/pregnant_with_bags" />
 
                     <TextView
                         android:layout_width="wrap_content"
