prices and forget password are done

--- a/app/src/main/res/layout/fragment_doctor_home_2.xml
+++ b/app/src/main/res/layout/fragment_doctor_home_2.xml
@@ -44,6 +44,17 @@
         app:layout_constraintTop_toBottomOf="@id/menu"
         android:layout_marginTop="35dp"/>
 
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/money"
+        app:layout_constraintStart_toStartOf="@id/welcome"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/purple"
+        app:layout_constraintTop_toBottomOf="@id/menu"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
