--- a/app/src/main/res/layout/fragment_b_login.xml
+++ b/app/src/main/res/layout/fragment_b_login.xml
@@ -218,4 +218,12 @@
         android:visibility="gone"
         android:indeterminateTint="@color/default_pink"/>
 
+    <TextView
+        android:id="@+id/forget_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/editText2"
+        app:layout_constraintStart_toStartOf="@id/editText2"
+        android:text="هل نسيت كلمة المرور ؟"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
