--- a/app/src/main/res/layout/fragment_patient_baby_kicks.xml
+++ b/app/src/main/res/layout/fragment_patient_baby_kicks.xml
@@ -9,8 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.03"
-        />
+        app:layout_constraintGuide_percent="0.03" />
 
     <ImageView
         android:layout_width="wrap_content"
