--- a/app/src/main/res/layout/item_prices.xml
+++ b/app/src/main/res/layout/item_prices.xml
@@ -25,6 +25,7 @@
             tool:text="كشف"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toStartOf="@id/seperator"
+            app:layout_constraintStart_toEndOf="@id/servicePrice1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="20sp"
