--- a/app/src/main/res/layout/fragment_b_about_doctor.xml
+++ b/app/src/main/res/layout/fragment_b_about_doctor.xml
@@ -36,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
-        android:text="About The Doctor"
+        android:text="عن الدكتور"
         android:textStyle="bold|italic"
         android:textSize="20sp"
         android:textColor="@color/default_pink"
@@ -128,6 +128,7 @@
         android:backgroundTint="@color/yellow_star"/>
 
     <TextView
+        android:id="@+id/veseeta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="علي فيزيتا (Veseeta)"
@@ -141,13 +142,23 @@
         android:layout_marginEnd="8dp" />
 
     <TextView
+        android:id="@+id/veseeta_logo"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/veseeta_logo"
+        app:layout_constraintTop_toTopOf="@id/veseeta"
+        app:layout_constraintBottom_toBottomOf="@id/veseeta"
+        app:layout_constraintEnd_toStartOf="@id/veseeta"
+        android:layout_marginEnd="10dp"/>
+
+    <TextView
         android:id="@+id/c_star1"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:background="@drawable/star"
         app:layout_constraintEnd_toEndOf="@id/name"
         app:layout_constraintTop_toBottomOf="@id/v_star1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/yellow_star"/>
     <TextView
         android:id="@+id/c_star2"
@@ -156,7 +167,7 @@
         android:background="@drawable/star"
         app:layout_constraintEnd_toStartOf="@id/c_star1"
         app:layout_constraintTop_toBottomOf="@id/v_star1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/yellow_star"/>
 
     <TextView
@@ -166,7 +177,7 @@
         android:background="@drawable/star"
         app:layout_constraintEnd_toStartOf="@id/c_star2"
         app:layout_constraintTop_toBottomOf="@id/v_star1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/yellow_star"/>
 
     <TextView
@@ -176,7 +187,7 @@
         android:background="@drawable/star"
         app:layout_constraintEnd_toStartOf="@id/c_star3"
         app:layout_constraintTop_toBottomOf="@id/v_star1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/yellow_star"/>
 
     <TextView
@@ -186,10 +197,11 @@
         android:background="@drawable/star"
         app:layout_constraintEnd_toStartOf="@id/c_star4"
         app:layout_constraintTop_toBottomOf="@id/v_star1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/yellow_star"/>
 
     <TextView
+        android:id="@+id/clindo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="علي كليندو (Clindo)"
@@ -201,6 +213,16 @@
         app:layout_constraintTop_toTopOf="@id/c_star5"
         app:layout_constraintBottom_toBottomOf="@id/c_star5"
         android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/clindo_logo"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:background="@drawable/clindo_logo"
+        app:layout_constraintTop_toTopOf="@id/clindo"
+        app:layout_constraintBottom_toBottomOf="@id/clindo"
+        app:layout_constraintEnd_toStartOf="@id/clindo"
+        android:layout_marginEnd="15dp"/>
 
     <TextView
         android:id="@+id/contact_title"
