--- a/app/src/main/res/layout/fragment_b_feedback.xml
+++ b/app/src/main/res/layout/fragment_b_feedback.xml
@@ -46,7 +46,7 @@
         android:text="@string/all_feedbacks"
         android:textStyle="bold|italic"
         android:textSize="25sp"
-        android:textColor="@color/grey"
+        android:textColor="@color/default_pink"
         app:layout_constraintBottom_toBottomOf="@id/arrowBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/arrowBack"
