--- a/app/src/main/res/layout/fragment_b_settings.xml
+++ b/app/src/main/res/layout/fragment_b_settings.xml
@@ -56,8 +56,8 @@
         android:layout_height="30dp"
         android:background="@drawable/profile"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/setting_text"/>
 
     <TextView
@@ -69,20 +69,20 @@
         android:fontFamily="@font/poppins_light"
         android:textStyle="italic"
         android:textColor="@color/default_blue"
-        app:layout_constraintStart_toEndOf="@id/profile_icon"
+        app:layout_constraintEnd_toStartOf="@id/profile_icon"
         app:layout_constraintTop_toBottomOf="@id/setting_text"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="13dp"/>
+        android:layout_marginEnd="13dp"/>
 
     <TextView
         android:id="@+id/profile_arrow"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/my_profile"
         app:layout_constraintBottom_toBottomOf="@id/my_profile"
-        android:background="@drawable/arrow_right"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/arrow_right" />
     
     <TextView
         android:layout_width="match_parent"
@@ -98,8 +98,8 @@
         android:layout_height="30dp"
         android:background="@drawable/about_us"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/my_profile"/>
 
     <TextView
@@ -111,20 +111,20 @@
         android:textStyle="italic"
         android:fontFamily="@font/poppins_light"
         android:textColor="@color/default_blue"
-        app:layout_constraintStart_toEndOf="@id/change_password_icon"
+        app:layout_constraintEnd_toStartOf="@id/change_password_icon"
         app:layout_constraintTop_toBottomOf="@id/my_profile"
         android:layout_marginTop="35dp"
-        android:layout_marginStart="13dp"/>
+        android:layout_marginEnd="13dp"/>
 
     <TextView
         android:id="@+id/about_doc_arrow"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/about_doctor"
         app:layout_constraintBottom_toBottomOf="@id/about_doctor"
-        android:background="@drawable/arrow_right"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/arrow_right" />
 
     <TextView
         android:layout_width="match_parent"
@@ -140,8 +140,8 @@
         android:layout_height="30dp"
         android:background="@drawable/clinic_logo"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/about_doctor"/>
 
     <TextView
@@ -153,20 +153,20 @@
         android:textStyle="italic"
         android:fontFamily="@font/poppins_light"
         android:textColor="@color/default_blue"
-        app:layout_constraintStart_toEndOf="@id/change_password_icon"
+        app:layout_constraintEnd_toStartOf="@id/about_us_icon"
         app:layout_constraintTop_toBottomOf="@id/about_doctor"
         android:layout_marginTop="35dp"
-        android:layout_marginStart="13dp"/>
+        android:layout_marginEnd="13dp"/>
 
     <TextView
         android:id="@+id/about_clinic_arrow"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/about_us"
         app:layout_constraintBottom_toBottomOf="@id/about_us"
-        android:background="@drawable/arrow_right"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/arrow_right" />
 
     <TextView
         android:layout_width="match_parent"
@@ -177,14 +177,56 @@
         android:layout_marginHorizontal="10dp"/>
 
     <TextView
+        android:id="@+id/our_services_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@id/about_us_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/services"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"/>
+
+    <TextView
+        android:id="@+id/our_services"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="الخدمات التي يقمها الدكتور"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:fontFamily="@font/poppins_light"
+        android:textColor="@color/default_blue"
+        android:layout_marginEnd="13dp"
+        app:layout_constraintTop_toTopOf="@id/our_services_icon"
+        app:layout_constraintBottom_toBottomOf="@id/our_services_icon"
+        app:layout_constraintEnd_toStartOf="@id/our_services_icon"/>
+
+    <TextView
+        android:id="@+id/services_arrow"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toTopOf="@id/our_services"
+        app:layout_constraintBottom_toBottomOf="@id/our_services"
+        android:background="@drawable/arrow_right" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/our_services"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"/>
+
+    <TextView
         android:id="@+id/feedback_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/baseline_feed_24"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/about_us"/>
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/our_services_icon"/>
 
     <TextView
         android:id="@+id/feedback"
@@ -195,20 +237,20 @@
         android:textStyle="italic"
         android:textColor="@color/default_blue"
         android:fontFamily="@font/poppins_light"
-        app:layout_constraintStart_toEndOf="@id/change_password_icon"
-        app:layout_constraintTop_toBottomOf="@id/about_us"
+        app:layout_constraintEnd_toStartOf="@id/feedback_icon"
+        app:layout_constraintTop_toBottomOf="@id/our_services"
         android:layout_marginTop="35dp"
-        android:layout_marginStart="13dp"/>
+        android:layout_marginEnd="13dp"/>
 
     <TextView
         android:id="@+id/logout_arrow"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/logout"
         app:layout_constraintBottom_toBottomOf="@id/logout"
-        android:background="@drawable/arrow_right"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/arrow_right" />
 
     <TextView
         android:layout_width="match_parent"
@@ -224,8 +266,8 @@
         android:layout_height="30dp"
         android:background="@drawable/logout_icon"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/feedback_icon"/>
 
     <TextView
@@ -237,20 +279,20 @@
         android:textStyle="italic"
         android:textColor="@color/default_blue"
         android:fontFamily="@font/poppins_light"
-        app:layout_constraintStart_toEndOf="@id/logout_icon"
+        app:layout_constraintEnd_toStartOf="@id/logout_icon"
         app:layout_constraintTop_toBottomOf="@id/feedback"
         android:layout_marginTop="35dp"
-        android:layout_marginStart="13dp"/>
+        android:layout_marginEnd="13dp"/>
 
     <TextView
         android:id="@+id/feedbacks_arrow"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/feedback"
         app:layout_constraintBottom_toBottomOf="@id/feedback"
-        android:background="@drawable/arrow_right"
-        android:layout_marginEnd="20dp"/>
+        android:background="@drawable/arrow_right" />
 
     <TextView
         android:layout_width="match_parent"
@@ -259,5 +301,7 @@
         app:layout_constraintTop_toBottomOf="@id/feedback"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="10dp"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
