--- a/app/src/main/res/layout/fragment_doctor_prices.xml
+++ b/app/src/main/res/layout/fragment_doctor_prices.xml
@@ -32,21 +32,30 @@
         android:id="@+id/headerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="عن خدماتنا"
+        android:text="اسعار خدماتنا"
         android:textColor="@color/default_pink"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:paddingBottom="10dp"
         app:layout_constraintTop_toBottomOf="@id/horizontalUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
+        android:id="@+id/des"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/headerTitle"
+        android:text="(متاح الدفع بالفيزا)"
+        app:layout_constraintStart_toStartOf="@id/headerTitle"
+        app:layout_constraintEnd_toEndOf="@id/headerTitle"/>
+
+    <TextView
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="4dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/thin_line"
-        app:layout_constraintTop_toBottomOf="@id/headerTitle"
+        app:layout_constraintTop_toBottomOf="@id/des"
         android:layout_marginHorizontal="30dp"/>
 
     <ImageView
