--- a/app/src/main/res/layout/fragment_patient_baby_names.xml
+++ b/app/src/main/res/layout/fragment_patient_baby_names.xml
@@ -52,11 +52,20 @@
         android:fontFamily="@font/poppins_black"/>
 
     <TextView
+        android:id="@+id/des"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/about"
+        android:text="ساعدي باقي الامهات في اختيار اسامي مميزة لاطفالهم"
+        app:layout_constraintStart_toStartOf="@id/about"
+        app:layout_constraintEnd_toEndOf="@id/about"/>
+
+    <TextView
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@drawable/thin_line"
-        app:layout_constraintTop_toBottomOf="@id/about"
+        app:layout_constraintTop_toBottomOf="@id/des"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="30dp"/>
 
