--- a/app/src/main/res/layout/item_faq_question.xml
+++ b/app/src/main/res/layout/item_faq_question.xml
@@ -24,7 +24,8 @@
             android:layout_weight="1"
             tool:text="Sample Question"
             android:paddingHorizontal="10dp"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textColor="@color/default_pink"/>
 
         <ImageView
             android:id="@+id/iv_expand_arrow"
