--- a/app/src/main/res/layout/fragment_b_doctor_services.xml
+++ b/app/src/main/res/layout/fragment_b_doctor_services.xml
@@ -120,7 +120,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="• الكشف بالموجات الصوتيه 3D"
+                android:text="• الكشف بالموجات الصوتيه "
                 android:textSize="18sp"
                 android:layout_marginBottom="8dp"
                 android:gravity="end"
