--- a/app/src/main/res/layout/fragment_b_feedback.xml
+++ b/app/src/main/res/layout/fragment_b_feedback.xml
@@ -82,6 +82,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="16dp"
+        android:visibility="gone"
         android:layout_marginBottom="16dp"/>
 
     <ProgressBar
