--- a/app/src/main/res/layout/fragment_b_settings.xml
+++ b/app/src/main/res/layout/fragment_b_settings.xml
@@ -265,10 +265,10 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/logout_icon"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/feedback_icon"/>
+        app:layout_constraintTop_toBottomOf="@id/line"/>
 
     <TextView
         android:id="@+id/logout"
@@ -295,6 +295,7 @@
         android:background="@drawable/arrow_right" />
 
     <TextView
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@drawable/thin_line"
