--- a/app/src/main/res/layout/fragment_patient_for_you.xml
+++ b/app/src/main/res/layout/fragment_patient_for_you.xml
@@ -202,7 +202,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="10dp"
-                    android:src="@drawable/delivery_gif"
+                    android:src="@drawable/baby_gif"
                     android:background="@color/white"
                     />
 
@@ -220,6 +220,57 @@
                     android:textStyle="bold"
                     android:fontFamily="@font/poppins_black"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/following_pregnancy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"
+                app:cardCornerRadius="20dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/text_following_pregnancy"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/welcome_top"
+                        android:backgroundTint="@color/white"
+                        android:paddingStart="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <pl.droidsonroids.gif.GifImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/delivery_gif"
+                        android:background="@color/white"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="اعرفي ميعاد ولادتك"
+                        android:textSize="20sp"
+                        android:textColor="@color/black"
+                        app:layout_constraintEnd_toEndOf="@id/text_following_pregnancy"
+                        app:layout_constraintTop_toTopOf="@id/text_following_pregnancy"
+                        app:layout_constraintBottom_toBottomOf="@id/text_following_pregnancy"
+                        app:layout_constraintStart_toStartOf="@id/text_following_pregnancy"
+                        android:layout_marginStart="140dp"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/poppins_black"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
