--- a/app/src/main/res/layout/fragment_patient_baby_kicks.xml
+++ b/app/src/main/res/layout/fragment_patient_baby_kicks.xml
@@ -142,12 +142,22 @@
 
     <TextView
         android:id="@+id/reset"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:background="@drawable/reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="35dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ابدأي العد من جديد"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/reset"
+        app:layout_constraintStart_toStartOf="@id/reset"
+        app:layout_constraintEnd_toEndOf="@id/reset"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
